# open-computer-use

./: .gitignore  .mcp.json  Dockerfile.mcp  README.md  SKILL.md  gsd_computer_use.py  open_computer_use_cli.py  pyproject.toml  requirements-agent.txt  requirements-docker.txt  requirements-linux.txt  requirements-lock.txt  requirements.txt  skill.json
.codex-plugin/: plugin.json
computer_use/: __init__.py  audit.py  failure.py  matcher.py  safety.py  server.py  tools.py  types.py  vision.py
computer_use/backends/: __init__.py  base.py  fake.py  input_utils.py  linux_x11.py  macos.py
docker/deploy/: docker-compose.yml
docker/desktop-test/: Dockerfile  docker-compose.yml  run-and-record.sh
docs/: ARCHITECTURE.md  TESTING.md  docker-desktop-test-plan.md  maturity-roadmap.md
docs/learnings/: travel-learnings.md
docs/plans/: BUGFIX.md  DOCKER_TEST_PLAN.md  IMPLEMENTATION_PLAN.md  MATURITY_ROADMAP.md  PARITY_FIX_PLAN.md
open_computer_use/: __init__.py  audit.py  failure.py  matcher.py  safety.py  server.py  tools.py
open_computer_use/backends/: __init__.py  base.py  fake.py
scripts/: computer_use_mcp_server.py  flight_search_kayak.py  open_computer_use_mcp_server.py  run_computer_use_mcp.sh  run_open_computer_use_mcp.sh
skills/computer-use/: SKILL.md
skills/open-computer-use/: SKILL.md
test-recordings/: .gitkeep
test-recordings/flight_search/: view.html
tests/: conftest.py  mcp_client.py  test_audit.py  test_browser_kayak.py  test_clipboard.py  test_coverage_gaps.py  test_desktop_smoke.py  test_failure_modes.py  test_improvements.py  test_linux_desktop_live.py  test_linux_parity.py  test_mcp_contract.py  test_observability.py  test_packaging.py  test_recording.py  test_safety.py  test_tree_quality.py  test_unit_coverage.py  test_vision.py  test_visual_click.py
tests/fixtures/: desktop_app.py  dump_atspi.py
