[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gsd-computer-use"
version = "1.0.0"
description = "Self-hosted Computer Use MCP server for desktop automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
gsd-computer-use = "computer_use.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "requires_fake: test only works with the fake backend (skipped with real backends)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
