[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-computer-use"
dynamic = ["version"]
description = "Self-hosted Computer Use MCP server for desktop automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pyperclip>=1.8.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
open-computer-use-mcp = "open_computer_use.server:main"
open-computer-use = "open_computer_use.server:main"

[tool.setuptools.packages.find]
include = ["open_computer_use*"]

[tool.setuptools.dynamic]
version = {attr = "open_computer_use.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "requires_fake: test only works with the fake backend (skipped with real backends)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
